--- a/course-service/package.json
+++ b/course-service/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
