--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "firebase": "^10.12.0",
     "joi": "^17.13.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -21,7 +22,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.10.8",
+    "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
