--- a/course-service/package.json
+++ b/course-service/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.0",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
     "react-paginate": "^8.2.0"
   },
   "devDependencies": {
