--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "stripe": "^15.6.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
